--- a/EfficientNet.ipynb
+++ b/EfficientNet.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,17 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: \"https://github.com/lukemelas/EfficientNet-PyTorch/releases/download/1.0/efficientnet-b0-355c32eb.pth\" to C:\\Users\\hp/.cache\\torch\\hub\\checkpoints\\efficientnet-b0-355c32eb.pth\n",
-      "100%|██████████| 20.4M/20.4M [05:04<00:00, 70.3kB/s]\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -388,7 +380,7 @@
        ")"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,120 +459,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded pretrained weights for efficientnet-b0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_15868\\2657178805.py:11: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load('efficientnet_gender_classification_model.pth', map_location=torch.device('cpu')))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running on local URL:  http://127.0.0.1:7863\n",
-      "Running on public URL: https://67c7f372ca7982f278.gradio.live\n",
-      "\n",
-      "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"https://67c7f372ca7982f278.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from torchvision import transforms\n",
-    "from efficientnet_pytorch import EfficientNet\n",
-    "from PIL import Image\n",
-    "import gradio as gr\n",
-    "\n",
-    "# Load the Pretrained EfficientNet Model\n",
-    "model = EfficientNet.from_pretrained('efficientnet-b0')\n",
-    "model._fc = nn.Linear(model._fc.in_features, 2)  # Adjust the final layer for 2 classes (male, female)\n",
-    "model.load_state_dict(torch.load('efficientnet_gender_classification_model.pth', map_location=torch.device('cpu')))\n",
-    "model.eval()\n",
-    "\n",
-    "# Image Preprocessing\n",
-    "transform = transforms.Compose([\n",
-    "    transforms.Resize((224, 224)),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
-    "])\n",
-    "\n",
-    "# Gender Classification Function\n",
-    "def classify_gender(image):\n",
-    "    image = Image.fromarray(image)  # Convert NumPy array to PIL Image\n",
-    "    image = transform(image).unsqueeze(0)  # Add batch dimension\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        outputs = model(image)\n",
-    "        _, predicted = torch.max(outputs, 1)\n",
-    "    \n",
-    "    return 'Female' if predicted.item() == 0 else 'Male'\n",
-    "\n",
-    "# Gradio Interface\n",
-    "iface = gr.Interface(fn=classify_gender, \n",
-    "                     inputs=gr.Image(type=\"numpy\"), \n",
-    "                     outputs=gr.Textbox(), \n",
-    "                     title=\"Gender Classification\",\n",
-    "                     description=\"Upload an image to classify gender.\")\n",
-    "\n",
-    "# Launch the Interface\n",
-    "iface.launch(share = True)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded pretrained weights for efficientnet-b0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_15952\\504817859.py:14: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load('efficientnet_gender_classification_model.pth', map_location=device))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "from PIL import Image\n",
@@ -590,6 +471,7 @@
     "import torch.nn as nn\n",
     "from efficientnet_pytorch import EfficientNet\n",
     "from torchvision import transforms\n",
+    "import gradio as gr\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
@@ -607,42 +489,128 @@
     "\n",
     "mtcnn = MTCNN(keep_all=True, device=device)\n",
     "\n",
-    "def detect_and_classify():\n",
-    "    cap = cv2.VideoCapture(0)\n",
+    "def classify_gender(image):\n",
+    "    frame = np.array(image)  # Convert PIL image to NumPy array\n",
+    "    boxes, _ = mtcnn.detect(frame)\n",
     "\n",
+    "    if boxes is not None:\n",
+    "        for box in boxes:\n",
+    "            # Extract the face region\n",
+    "            x1, y1, x2, y2 = map(int, box)\n",
+    "            face = frame[y1:y2, x1:x2]\n",
+    "\n",
+    "            face_pil = Image.fromarray(face)\n",
+    "            face_tensor = transform(face_pil).unsqueeze(0).to(device)\n",
+    "\n",
+    "            with torch.no_grad():\n",
+    "                outputs = model(face_tensor)\n",
+    "                _, predicted = torch.max(outputs, 1)\n",
+    "                gender = 'Female' if predicted.item() == 0 else 'Male'\n",
+    "\n",
+    "            # Draw rectangle and label around the detected face\n",
+    "            cv2.rectangle(frame, (x1, y1), (x2, y2), (255, 0, 0), 2)\n",
+    "            cv2.putText(frame, gender, (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (255, 0, 0), 2)\n",
+    "\n",
+    "    return frame\n",
+    "\n",
+    "def webcam_feed():\n",
+    "    cap = cv2.VideoCapture(0)\n",
     "    while True:\n",
     "        ret, frame = cap.read()\n",
     "        if not ret:\n",
     "            break\n",
     "\n",
-    "        boxes, _ = mtcnn.detect(frame)\n",
+    "        frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "        frame = classify_gender(frame)\n",
     "\n",
-    "        if boxes is not None:\n",
-    "            for box in boxes:\n",
-    "                # Extract the face region\n",
-    "                x1, y1, x2, y2 = map(int, box)\n",
-    "                face = frame[y1:y2, x1:x2]\n",
-    "\n",
-    "                face_pil = Image.fromarray(face)\n",
-    "                face_tensor = transform(face_pil).unsqueeze(0).to(device)\n",
-    "\n",
-    "                with torch.no_grad():\n",
-    "                    outputs = model(face_tensor)\n",
-    "                    _, predicted = torch.max(outputs, 1)\n",
-    "                    gender = 'Female' if predicted.item() == 0 else 'Male'\n",
-    "\n",
-    "                cv2.rectangle(frame, (x1, y1), (x2, y2), (255, 0, 0), 2)\n",
-    "                cv2.putText(frame, gender, (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (255, 0, 0), 2)\n",
-    "\n",
-    "        cv2.imshow('Gender Classification', frame)\n",
-    "        \n",
-    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "            break\n",
+    "        yield frame\n",
     "\n",
     "    cap.release()\n",
-    "    cv2.destroyAllWindows()\n",
     "\n",
-    "detect_and_classify()\n"
+    "def gradio_webcam_feed():\n",
+    "    for frame in webcam_feed():\n",
+    "        yield frame\n",
+    "\n",
+    "iface = gr.Interface(fn=gradio_webcam_feed, \n",
+    "                     inputs=[], \n",
+    "                     outputs=gr.Image(label=\"Gender Classification\"),\n",
+    "                     live=True)\n",
+    "\n",
+    "iface.launch()\n",
+    "import cv2\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "from facenet_pytorch import MTCNN\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from efficientnet_pytorch import EfficientNet\n",
+    "from torchvision import transforms\n",
+    "import gradio as gr\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "model = EfficientNet.from_pretrained('efficientnet-b0')\n",
+    "model._fc = nn.Linear(model._fc.in_features, 2)  # Adjust the final layer for 2 classes (male, female)\n",
+    "model.load_state_dict(torch.load('efficientnet_gender_classification_model.pth', map_location=device))\n",
+    "model.to(device)\n",
+    "model.eval()\n",
+    "\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((224, 224)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+    "])\n",
+    "\n",
+    "mtcnn = MTCNN(keep_all=True, device=device)\n",
+    "\n",
+    "def classify_gender(image):\n",
+    "    frame = np.array(image)  # Convert PIL image to NumPy array\n",
+    "    boxes, _ = mtcnn.detect(frame)\n",
+    "\n",
+    "    if boxes is not None:\n",
+    "        for box in boxes:\n",
+    "            # Extract the face region\n",
+    "            x1, y1, x2, y2 = map(int, box)\n",
+    "            face = frame[y1:y2, x1:x2]\n",
+    "\n",
+    "            face_pil = Image.fromarray(face)\n",
+    "            face_tensor = transform(face_pil).unsqueeze(0).to(device)\n",
+    "\n",
+    "            with torch.no_grad():\n",
+    "                outputs = model(face_tensor)\n",
+    "                _, predicted = torch.max(outputs, 1)\n",
+    "                gender = 'Female' if predicted.item() == 0 else 'Male'\n",
+    "\n",
+    "            # Draw rectangle and label around the detected face\n",
+    "            cv2.rectangle(frame, (x1, y1), (x2, y2), (255, 0, 0), 2)\n",
+    "            cv2.putText(frame, gender, (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (255, 0, 0), 2)\n",
+    "\n",
+    "    return frame\n",
+    "\n",
+    "def webcam_feed():\n",
+    "    cap = cv2.VideoCapture(0)\n",
+    "    while True:\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "\n",
+    "        frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "        frame = classify_gender(frame)\n",
+    "\n",
+    "        yield frame\n",
+    "\n",
+    "    cap.release()\n",
+    "\n",
+    "def gradio_webcam_feed():\n",
+    "    for frame in webcam_feed():\n",
+    "        yield frame\n",
+    "\n",
+    "iface = gr.Interface(fn=gradio_webcam_feed, \n",
+    "                     inputs=[], \n",
+    "                     outputs=gr.Image(label=\"Gender Classification\"),\n",
+    "                     live=True)\n",
+    "\n",
+    "iface.launch()\n"
    ]
   },
   {
