--- a/EfficientNet.ipynb
+++ b/EfficientNet.ipynb
@@ -490,7 +490,7 @@
     "mtcnn = MTCNN(keep_all=True, device=device)\n",
     "\n",
     "def classify_gender(image):\n",
-    "    frame = np.array(image)  # Convert PIL image to NumPy array\n",
+    "    frame = np.array(image)  \n",
     "    boxes, _ = mtcnn.detect(frame)\n",
     "\n",
     "    if boxes is not None:\n",
@@ -507,81 +507,7 @@
     "                _, predicted = torch.max(outputs, 1)\n",
     "                gender = 'Female' if predicted.item() == 0 else 'Male'\n",
     "\n",
-    "            # Draw rectangle and label around the detected face\n",
-    "            cv2.rectangle(frame, (x1, y1), (x2, y2), (255, 0, 0), 2)\n",
-    "            cv2.putText(frame, gender, (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (255, 0, 0), 2)\n",
-    "\n",
-    "    return frame\n",
-    "\n",
-    "def webcam_feed():\n",
-    "    cap = cv2.VideoCapture(0)\n",
-    "    while True:\n",
-    "        ret, frame = cap.read()\n",
-    "        if not ret:\n",
-    "            break\n",
-    "\n",
-    "        frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
-    "        frame = classify_gender(frame)\n",
-    "\n",
-    "        yield frame\n",
-    "\n",
-    "    cap.release()\n",
-    "\n",
-    "def gradio_webcam_feed():\n",
-    "    for frame in webcam_feed():\n",
-    "        yield frame\n",
-    "\n",
-    "iface = gr.Interface(fn=gradio_webcam_feed, \n",
-    "                     inputs=[], \n",
-    "                     outputs=gr.Image(label=\"Gender Classification\"),\n",
-    "                     live=True)\n",
-    "\n",
-    "iface.launch()\n",
-    "import cv2\n",
-    "from PIL import Image\n",
-    "import numpy as np\n",
-    "from facenet_pytorch import MTCNN\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from efficientnet_pytorch import EfficientNet\n",
-    "from torchvision import transforms\n",
-    "import gradio as gr\n",
-    "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
-    "model = EfficientNet.from_pretrained('efficientnet-b0')\n",
-    "model._fc = nn.Linear(model._fc.in_features, 2)  # Adjust the final layer for 2 classes (male, female)\n",
-    "model.load_state_dict(torch.load('efficientnet_gender_classification_model.pth', map_location=device))\n",
-    "model.to(device)\n",
-    "model.eval()\n",
-    "\n",
-    "transform = transforms.Compose([\n",
-    "    transforms.Resize((224, 224)),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
-    "])\n",
-    "\n",
-    "mtcnn = MTCNN(keep_all=True, device=device)\n",
-    "\n",
-    "def classify_gender(image):\n",
-    "    frame = np.array(image)  # Convert PIL image to NumPy array\n",
-    "    boxes, _ = mtcnn.detect(frame)\n",
-    "\n",
-    "    if boxes is not None:\n",
-    "        for box in boxes:\n",
-    "            # Extract the face region\n",
-    "            x1, y1, x2, y2 = map(int, box)\n",
-    "            face = frame[y1:y2, x1:x2]\n",
-    "\n",
-    "            face_pil = Image.fromarray(face)\n",
-    "            face_tensor = transform(face_pil).unsqueeze(0).to(device)\n",
-    "\n",
-    "            with torch.no_grad():\n",
-    "                outputs = model(face_tensor)\n",
-    "                _, predicted = torch.max(outputs, 1)\n",
-    "                gender = 'Female' if predicted.item() == 0 else 'Male'\n",
-    "\n",
-    "            # Draw rectangle and label around the detected face\n",
+    "            \n",
     "            cv2.rectangle(frame, (x1, y1), (x2, y2), (255, 0, 0), 2)\n",
     "            cv2.putText(frame, gender, (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (255, 0, 0), 2)\n",
     "\n",
@@ -612,13 +538,6 @@
     "\n",
     "iface.launch()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
